@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<table cellpadding="0" cellspacing="5">
+<table width="100%" cellpadding="0" cellspacing="5">
 	<tr>
-		<td width=150>Picture here. Gentoo Logo</td><td><img src="/banner-800x64.png">
-		</td>
+		<td width=150>Picture here. Gentoo Logo</td><td><img src="/banner-800x64.png"></td>
+		<td>&nbsp;</td>
 	</tr>
 	<tr>
 		<td valign="top"><p><a href="/webgli">Welcome</a></p>
