@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.466 2005/11/07 17:19:51 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.467 2005/11/07 19:37:16 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -9,6 +9,9 @@
   src/net/server/handlers/WebGLIHandler.py:
   initial 'pretty' partition table display support
   clicking partition in 'pretty' display works instead of radio buttons
+  radio buttons and pretty display work together
+  META redirect instead of javascript
+  pretty display stretches across entire screen
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
